projeto minha empresa html

--- a/contato.html
+++ b/contato.html
@@ -23,6 +23,24 @@
 
     <div class="contato">
         <h1>Contato</h1>
+        <div class="container">
+            <div class="telefone">
+                <a href="https://web.whatsapp.com/" target="_blank"> <img src="./img/Phone.png" alt="Phone"></a>
+                <p>+551199999-9999</p>
+            </div>
+            <div class="mail">
+                <a href="https://login.live.com/" target="_blank"> <img src="./img/Email.png" alt="mail"></a>
+                <p>arquitetura@arquitetura.com</p>
+            </div>
+            <div class="facebook">
+                <a href="https://pt-br.facebook.com/" target="_blank"> <img src="./img/Facebook.png" alt="facebook"></a>
+                <p>facebook.com/arquitetura</p>
+            </div>
+            <div class="instagram">
+                <a href="https://www.instagram.com/" target="_blank"> <img src="./img/Instagram.png" alt="instagram"></a>
+                <p>instagram.com/arquitetura</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
